--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,20 +17,18 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <fragment
+            android:id="@+id/navHostFragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <fragment
-                android:id="@+id/titleFragment"
-                android:name="com.example.android.navigation.TitleFragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-            <!-- TODO (04) Add a fragment tag for the titleFragment in the LinearLayout
-                 Use @+id/titleFragment for the android:id
-                 Use com.example.android.navigation.TitleFragment for the android:name
-                 Use match_parent for the layout_height and layout_width -->
-        </LinearLayout>
+            app:defaultNavHost = "true"
+            app:navGraph="@navigation/navigation" />
+    </LinearLayout>
 
 </layout>
